fix(web): Home data-wrap flex

--- a/packages/web/src/container/Home/style.module.less
+++ b/packages/web/src/container/Home/style.module.less
@@ -19,6 +19,7 @@
     padding: 10px;
     .data-wrap {
       font-size: 14px;
+      display: flex;
       > span {
         font-size: 12px;
         > b {
